[package]
name = "apibeast"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.7"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Environment Variables
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# UUID Generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI Parser
serde_yaml = "0.9"

# Database (SQLite for simplicity)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
